--- a/inxswapcalculator.html
+++ b/inxswapcalculator.html
@@ -535,8 +535,8 @@
                 </div>
             </div>
             <div class="lang-toggle">
-                <button class="lang-btn active" id="langKo" onclick="setLang('ko')">한국어</button>
-                <button class="lang-btn" id="langEn" onclick="setLang('en')">English</button>
+                <button class="lang-btn" id="langKo" onclick="setLang('ko')">한국어</button>
+                <button class="lang-btn active" id="langEn" onclick="setLang('en')">English</button>
             </div>
         </header>
         
