--- a/inxswapcalculator.html
+++ b/inxswapcalculator.html
@@ -771,7 +771,7 @@
             }
         };
         
-        let currentLang = 'ko';
+        let currentLang = 'en';
         
         function setLang(lang) {
             currentLang = lang;
